first-submit relate #5

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="landing-content">
                     <h1>شركة الواحة للمظلات</h1>
                     <p>شركة قطرية مختصة في تركيب المظلات والخيام وجميع انواع الحديد المشغول شركة مصنفة من وزارة المالية القطرية ونعمل في هذا المجال متذ العام ٢٠١٠ شعارنا السرعة في الانجاز والعمل المتقن</p>
-                    <a class="whatsapp-btn">
+                    <a href="https://wa.link/betwxr" class="whatsapp-btn">
                         <p>تواصل معنا</p>
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
@@ -336,6 +336,164 @@
             </div>
             </section>
         <!-- End Our Service -->
+            <!-- Start Comments -->
+              <section class="Comments">
+            <div class="container">
+                <div class="Comments-content">
+                <h1>شهادات العملاء</h1>
+
+        <div class="slide-container swiper">
+            <div class="slide-content1">
+                <div class="card-wrapper swiper-wrapper">
+                     <div class="card swiper-slide">
+                        <div class="testimonials-card-1">
+                        <div>
+                            <h1 class="mt-5 pb-0">المنصور</h1>
+                            <img src="images/rating.png" alt="rating">
+                        </div>
+                        <div class="border"></div>
+                        <div class="rating">
+                            <p class="pb-2">ركبت من عندكم خدمة ولا أروع وترتيب ومشكورين وخاصه الاخ نضال شكرا جزيلا يتابع اول بأول شكرا نضال</p>
+                        </div>
+            </div>
+                     </div>
+                     <div class="card swiper-slide">
+                        <div class="testimonials-card-2">
+                        <div>
+                            <h1 class="mt-5">نضال</h1>
+                            <img src="images/rating.png" alt="rating">
+                        </div>
+                        <div class="border"></div>
+                        <div class="rating">
+                                            <p>روعات الواحه❤️</p>
+                        </div>
+            </div>
+                     </div>
+
+                                          <div class="card swiper-slide">
+                        <div class="testimonials-card-3">
+                        <div>
+                            <h1 class="mt-5">احمد</h1>
+                            <img src="images/rating.png" alt="rating">
+                        </div>
+                        <div class="border"></div>
+                        <div class="rating">
+                            <p>انا مركب من عندكم من 5 سنوات وما زالت ممتازة</p>
+                        </div>
+            </div>
+                     </div>
+
+                   
+
+            </div>
+            </div>
+                        <div class="swiper-button-next1 swiper-navBtn"></div>
+            <div class="swiper-button-prev1  swiper-navBtn"></div>
+            <div class="swiper-pagination1"></div>
+                        </div>
+            </div>
+            </div>
+                        </section>
+
+            <!-- End Commints -->
+<!-- Start Social Media Icons -->
+<section class="Social-Media-Icons">
+    <div class="container">
+        <h1>حساباتنا على مواقع التواصل الاجتماعي</h1>
+        <ul>
+  <li><a href="https://wa.link/betwxr"><i class="fa-brands fa-whatsapp"  aria-hidden="true"></i></a></li>
+  <li><a href="mailto: alwahaqatar@gmail.com"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a></li>
+  <li><a href="https://www.instagram.com/alwaahashade/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+</ul>
+    </div>
+</section>
+<!-- End Social Media Icons  -->
+<!-- Start Contact  Form -->
+	<section class="ftco-section">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-6 text-center mb-5">
+					<h2 class="heading-section">تواصل معنا</h2>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-lg-10 col-md-12">
+					<div class="wrapper">
+						<div class="row no-gutters">
+							<div class="col-md-7 d-flex align-items-stretch">
+								<div class="contact-wrap w-100 p-md-5 p-4">
+									<h3 class="mb-4">ابقى على تواصل</h3>
+									<div id="form-message-warning" class="mb-4"></div> 
+									<form method="POST" id="contactForm" name="contactForm">
+										<div class="row">
+											<div class="col-md-6">
+												<div class="form-group pb-3">
+													<input type="text"  class="form-control" name="name" id="name" placeholder="الاسم">
+												</div>
+											</div>
+											<div class="col-md-6"> 
+												<div class="form-group pb-3">
+													<input type="email"  class="form-control" name="email" id="email" placeholder="الايميل">
+												</div>
+											</div>
+											<div class="col-md-12">
+												<div class="form-group pb-3">
+													<input type="text"  class="form-control" name="subject" id="subject" placeholder="الموضوع">
+												</div>
+											</div>
+											<div class="col-md-12">
+												<div class="form-group pb-3">
+													<textarea name="message"  class="form-control" id="message" cols="30" rows="7" placeholder="الرسالة"></textarea>
+												</div>
+											</div>
+											<div class="col-md-12">
+												<div class="form-group pb-3">
+													<input type="submit" value="ارسال رسالة" class="btn btn-primary">
+													<div class="submitting"></div>
+												</div>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="col-md-5 d-flex align-items-stretch p-0">
+								<div class="info-wrap bg-primary w-100 p-lg-5 p-4">
+									<h3 class="mb-4 mt-md-4" style="color: white;">تواصل</h3>
+				        	<div class="dbox w-100 d-flex align-items-start">
+				          </div>
+				        	<div class="dbox w-100 d-flex align-items-center pb-3">
+				        		<div class="icon d-flex align-items-center justify-content-center">
+				        			<span class="fa fa-phone"></span>
+				        		</div>
+				        		<div class="text pe-3">
+					            <p><span>الهاتف:</span> <a href="tel://1234567920" dir="ltr">+ 974 4456 8866</a></p>
+					          </div>
+				          </div>
+				        	<div class="dbox w-100 d-flex align-items-center pb-3">
+				        		<div class="icon d-flex align-items-center justify-content-center">
+				        			<span class="fa fa-paper-plane"></span>
+				        		</div>
+				        		<div class="text pe-3">
+					            <p><span>الايميل:</span> <a href="mailto: alwahaqatar@gmail.com">alwahaqatar@gmail.com</a></p>
+					          </div>
+				          </div>
+				        	<div class="dbox w-100 d-flex align-items-center pb-3">
+				        		<div class="icon d-flex align-items-center justify-content-center">
+				        			<span class="fa fa-globe"></span>
+				        		</div>
+				        		<div class="text pe-3">
+					            <p><span>الموقع: </span> <a href="#">alwahaqatar.com</a></p>
+					          </div>
+				          </div>
+			          </div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Contact  Form -->
         <!-- Swiper JS -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/all.min.js"></script>
