--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <div>
-                <img src="images/Logo.png" alt="logo" width="70">
-                <a class="navbar-brand ps-2 fw-bold" href="#">الواحة</a>
+                <img src="images/logo1.png" alt="logo" width="70">
+                <a class="navbar-brand ps-2 me-0 fw-bold" href="#">الواحة</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
