first-submit-B relate #9

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                 <div class="collapse navbar-collapse d-lg-flex justify-content-end align-items-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-xl-5">
                     <a class="nav-link active ps-lg-5 ps-md-0 active-link" href="#">الصفحة الرئيسية</a>
-                    <a class="nav-link  ps-xl-5 ps-lg-3 ps-md-0" href="#">الخدمات</a>
-                    <a class="nav-link  ps-xl-5 ps-lg-3 ps-md-0" href="#">اعمالنا</a>
-                    <a class="nav-link  ps-xl-5 ps-lg-3 ps-md-0">تواصل معنا</a>
+                    <!-- <a class="nav-link  ps-xl-5 ps-lg-3 ps-md-0" href="#features">الخدمات</a> -->
+                    <a class="nav-link  ps-xl-5 ps-lg-3 ps-md-0" href="#Our-Service">اعمالنا</a>
+                    <a class="nav-link  ps-xl-5 ps-lg-3 ps-md-0" href="#about-us">عنا</a>
+                    <a class="nav-link  ps-xl-5 ps-lg-3 ps-md-0" href="#ftco-section">تواصل معنا</a>
                 </div>
                 </div>
 
@@ -57,7 +58,7 @@
     <!-- End header -->
     <!-- Start features -->
     <div class="container">
-            <div class="features">
+            <div class="features" id="features">
                 <div>
                     <i class="fa-solid fa-umbrella-beach"></i>
                     <p>نقوم بعمل جميع انواع المظلات والحديد المشغول</p>
@@ -75,7 +76,7 @@
         <!-- End features -->
         <!--Start About us -->
         <div class="container">
-            <section class="about-us">
+            <section class="about-us" id="about-us">
                 <div class="about-us-content">
                     <p>الواحة للمظلات - قطر</p>
                     <p>لجميع انواع المظلات والسواتر والكويك سبان</p>
@@ -94,7 +95,7 @@
         </div>
         <!--End About us -->
         <!-- Start Our Service -->
-            <section class="Our-Service">
+            <section class="Our-Service" id="Our-Service">
             <div class="container">
                 <div class="Our-Service-content">
                 <h1>خدماتنا</h1>
@@ -409,7 +410,7 @@
 </section>
 <!-- End Social Media Icons  -->
 <!-- Start Contact  Form -->
-	<section class="ftco-section">
+	<section class="ftco-section" id="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
